--- a/src/components/Platforms/platforms.module.scss
+++ b/src/components/Platforms/platforms.module.scss
@@ -28,7 +28,7 @@
         display: flex;
         align-items: center;
         border: 1px solid $cards-background-color;
-        z-index: 1000;
+        z-index: 500;
 
         &::after {
             content: attr(data-tooltip);
